de-couple posts/previews by-page and by-slug
